samples/_failures_safe/1761533020_6d794a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fbde1c7.c: In function ‘main’:
./samples/SAFE/__tmp_7fbde1c7.c:146:9: error: expected declaration or statement at end of input
  146 |         if (strcmp(input, "ALL") == 0 || strcmp(input, level_to_string(logs[i].level)) == 0) {
      |         ^~
./samples/SAFE/__tmp_7fbde1c7.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7fbde1c7.c:146:9: error: expected declaration or statement at end of input
